terraform/modules/networking/vpc.tf
resource "aws_vpc" "vpc_app" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = { Name = "vpc_app" }
}
